feat: 补充代码格式化功能

--- a/src/pages/Format/Components/CodePreview/index.less
+++ b/src/pages/Format/Components/CodePreview/index.less
@@ -1,6 +1,10 @@
 .code {
   width: 40vw;
   height: 80vh;
-  background: #000;
+  color: #ddd;
+  background: rgb(10 10 10);
   border-radius: 5px;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  border: none;
 }
