feat: 补充JSON文件转换和JSON文件测试

--- a/src/pages/Format/Components/CodePreview/index.less
+++ b/src/pages/Format/Components/CodePreview/index.less
@@ -19,14 +19,14 @@
 .status {
   position: absolute;
   top: 0;
-  right: 15px;
+  right: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 0 10px;
   width: fit-content;
   height: 40px;
-  // background: rgba(255, 255, 255, .8);
+  // background: rgba(255, 255, 255, .3);
   // backdrop-filter: blur(10px);
   // -webkit-backdrop-filter: blur(5px);
   border-radius: 10px;
