feat: 增加KEY值模式切换

--- a/src/global.less
+++ b/src/global.less
@@ -2,8 +2,7 @@ body {
   margin: 0;
 }
 
-.noPadding,
-.ant-pro-layout-content {
+.noPadding {
   padding-block: 0 !important;
   padding-inline: 0 !important;
 }
