--- a/src/pages/DevAssistance/index.less
+++ b/src/pages/DevAssistance/index.less
@@ -7,9 +7,9 @@
   z-index: 1;
   top: 0;
   left: 0;
-  padding: 0 10px 10px;
+  padding: 20px 24px 10px;
   width: 100%;
-  background: rgb(255 255 255 / 30%);
+  background: rgb(255 255 255 / 70%);
   backdrop-filter: blur(10px);
   backdrop-filter: blur(5px);
   border-radius: 10px;
