fix: 调整文本和UI细节

--- a/src/pages/Push/index.less
+++ b/src/pages/Push/index.less
@@ -47,10 +47,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+  height: 80vh;
   width: 100%;
   font-size: 32px;
   color: rgb(211 211 211);
+  user-select: none;
 }
 
 .diffBox {
